--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "redis": "^5.7.0"
+    "redis": "^5.7.0",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
